clang/test/BSC/Negative/Trait/GenericTrait/impl_trait_for_instantiation_type/impl_trait_for_instantiation_type.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F<T> {
    T foo1(This *this);
};

struct MyStruct<T> {
    T res;
};

T struct MyStruct<T>::foo1(struct MyStruct<T> *this) {
    struct MyStruct<T> mystruct;
    return mystruct.res;
}

_Impl _Trait F<T> for struct MyStruct<int>; // expected-error {{use of undeclared identifier 'T'}}

_Impl _Trait F<int> for struct MyStruct<T>; // expected-error {{use of undeclared identifier 'T'}}
_Impl _Trait F<int> for struct MyStruct<int>; // expected-error {{function 'foo1' in '_Trait F<int>' is not implemented for 'struct MyStruct<int>'}}
